@@ -32,9 +32,10 @@
 #include "input-magick.h"
 #include "bitmap.h"
 
-at_bitmap_type magick_load_image(at_string filename,
-				 at_msg_func msg_func, 
-				 at_address msg_data)
+at_bitmap_type input_magick_reader(at_string filename,
+				   at_input_opts_type * opts,
+				   at_msg_func msg_func, 
+				   at_address msg_data)
 {
   Image *image = NULL;
   ImageInfo *image_info;
