@@ -17,16 +17,16 @@
    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
    USA. */
 
-/* $Id: input-png.h,v 1.6 2002/09/29 11:13:12 masata-y Exp $ */
+/* $Id: input-png.h,v 1.7 2002/10/05 19:38:25 masata-y Exp $ */
 
 #ifndef INPUT_PNG_H
 #define INPUT_PNG_H
 
 #include "input.h"
 
-at_bitmap_type png_load_image(at_string filename,
-			      at_input_opts_type * opts,
-			      at_msg_func msg_func, 
-			      at_address msg_data);
+at_bitmap_type input_png_reader (at_string filename,
+				 at_input_opts_type * opts,
+				 at_msg_func msg_func, 
+				 at_address msg_data);
 
 #endif /* not INPUT_PNG_H */
